re-arraigned key, remove un-needed schedule key css, add arrow to buttons

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -13,6 +13,7 @@ $music-purple: #562179;
 
 $flagship: #feb93a;
 
+$disabled-color: rgb(150, 150, 150);
 $primary-color: $ury-blue-color;
 $secondary-color: tint($ury-blue-color, 80%);
 $third-color: tint($ury-blue-color, 60%);
