--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -17,7 +17,7 @@ $shadow: rgba(0, 0, 0, 0.5);
   }
 
   &.disabled {
-    border-bottom: rgb(150, 150, 150) solid 10px;
+    border-bottom: $disabled-color solid 10px;
 
     &:hover {
       background-color: $white;
@@ -25,20 +25,6 @@ $shadow: rgba(0, 0, 0, 0.5);
   }
 
   box-shadow: 0 2px 4px $shadow;
-}
-@mixin schedule-key($color) {
-  display: inline-block;
-  background: $white;
-  border-bottom: $color solid 10px;
-  padding: 2px 5px;
-  margin: 5px 5px 10px;
-
-  &:hover {
-    background-color: tint($color, 60%);
-  }
-
-  box-shadow: 0 2px 4px $shadow;
-
 }
 
 .tables-container {
@@ -109,7 +95,7 @@ $shadow: rgba(0, 0, 0, 0.5);
     height: 24px;
   }
 
-  .schedule-timeslot:not(.schedule-blocks-sustainer) {
+  .schedule-timeslot:not(.schedule-block-sustainer) {
     cursor: pointer;
 
     &:hover {
@@ -120,7 +106,7 @@ $shadow: rgba(0, 0, 0, 0.5);
 
 $sustainer-color: tint($primary-color, 40%);
 
-.schedule-blocks-sustainer {
+.schedule-block-sustainer {
   @include schedule-block($sustainer-color, $black);
   background-color: $sustainer-color;
 
@@ -129,65 +115,40 @@ $sustainer-color: tint($primary-color, 40%);
   }
 }
 
-.schedule-blocks-regular {
+.schedule-block-regular {
   @include schedule-block($primary-color, $off-white-color);
 }
 
-.schedule-blocks-flagship {
+.schedule-block-flagship {
   @include schedule-block($flagship, $black);
 }
 
-.schedule-blocks-news {
+.schedule-block-news {
   @include schedule-block($news-maroon, $off-white-color);
 }
 
-.schedule-blocks-speech {
+.schedule-block-speech {
   @include schedule-block($speech-green, $off-white-color);
 }
 
-.schedule-blocks-music {
+.schedule-block-music {
   @include schedule-block($music-purple, $off-white-color);
 }
 
-.schedule-blocks-event {
+.schedule-block-event {
   @include schedule-block($red, $off-white-color);
 }
 
-.schedule-blocks-specialist-music {
+.schedule-block-specialist-music {
   @include schedule-block(tint($music-purple, 60%), $white);
 }
 
-
-.schedule-keys-regular {
-  @include schedule-key($primary-color);
-}
-
-.schedule-keys-flagship {
-  @include schedule-key($flagship);
-}
-
-.schedule-keys-news {
-  @include schedule-key($news-maroon);
-}
-
-.schedule-keys-speech {
-  @include schedule-key($speech-green);
-}
-
-.schedule-keys-music {
-  @include schedule-key($music-purple);
-}
-
-.schedule-keys-event {
-  @include schedule-key($red);
-}
-
-.schedule-keys-specialist-music {
-  @include schedule-key(tint($music-purple, 60%));
-}
-
-.schedule-keys .key-row {
-  text-align: right;
+.schedule-keys
+  .key-row {
+    text-align: right;
+    * {
+      display: inline-block;
+    }
 }
 
 @include media-breakpoint-down(md) {
