--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -24,33 +24,17 @@
         <h1 class="display-4 mobile-hide">Schedule</h1>
         <h5 class="text-muted mobile-hide">{{week (index .Schedule.Dates 0)}}</h5>
       </div>
-      <div class="col-12 col-lg-6 justify-content-end">
-        <div class="schedule-keys">
-          <div class="key-row">
-            <span class="h5">Key: </span>
-            <span class="schedule-keys-flagship">Flagship</span>
-            <span class="schedule-keys-event">Events</span>
-            <span class="schedule-keys-specialist-music">Specialist Music</span>
-          </div>
-          <div class="key-row">
-            <span class="h6">Team Content: </span>
-            <span class="schedule-keys-news">News</span>
-            <span class="schedule-keys-speech">Speech</span>
-            <span class="schedule-keys-music">Music</span>
-          </div>
-        </div>
-      </div>
     </div>
 
     <nav aria-label="Related Schedules" class="row nav justify-content-between">
       {{if .PrevURL}}
-        <a class="nav-link" href="{{url .PrevURL.Path}}">Previous week</a>
+        <a class="nav-link" href="{{url .PrevURL.Path}}">&larr; Previous week</a>
       {{end}}
       {{if .CurrURL}}
         <a class="nav-link" href="{{url .CurrURL.Path}}">Permalink</a>
       {{end}}
       {{if .NextURL}}
-        <a class="nav-link" href="{{url .NextURL.Path}}">Next week</a>
+        <a class="nav-link" href="{{url .NextURL.Path}}">Next week &rarr;</a>
       {{end}}
     </nav>
   </div>
@@ -87,7 +71,7 @@
             <tr>
               <td class="time-header mobile-only">{{.Hour | printf "%02d"}}:{{.Minute | printf "%02d"}}</td>
               {{if ne .RowSpan 0}}
-              <td rowspan="{{.RowSpan}}" class="schedule-timeslot schedule-blocks-{{.Item.Block}}" title="{{stripHTML .Item.Desc}}"
+              <td rowspan="{{.RowSpan}}" class="schedule-timeslot schedule-block-{{.Item.Block}}" title="{{stripHTML .Item.Desc}}"
                   {{if .Item.PageURL}} onclick="window.location.href='{{url .Item.PageURL}}'" {{end}} >
                 {{if .Item.PageURL}}
                   <a href="{{url .Item.PageURL}}" >{{.Item.Name}}</a>
@@ -103,15 +87,29 @@
     </div>
   {{else}}
     <div class="row justify-content-center p-5">
-      <div class="col-12 col-lg-8 p-5 text-center schedule-blocks-regular disabled">
+      <div class="col-12 col-lg-8 p-5 text-center schedule-block-regular disabled">
         <h3>There's nothing on for this week.</p>
         <h4>We're most likely off air, or we haven't scheduled it yet!</h4>
       </div>
     </div>
   {{end}}
+  <br>
+    <div class="row justify-content-center pb-3">
+        <div class="schedule-keys">
+          <div class="key-row">
+            <span class="h5">Key: </span>
+            <span class="schedule-block-flagship">Flagship</span>
+            <span class="schedule-block-event">Events</span>
+            <span class="schedule-block-specialist-music">Specialist Music</span>
+            <span class="h6">Team Content: </span>
+            <span class="schedule-block-news">News</span>
+            <span class="schedule-block-speech">Speech</span>
+            <span class="schedule-block-music">Music</span>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
-
 {{end}}
 {{end}}
 {{end}}
