Updated: Our History Content

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -59,11 +59,10 @@
   <div class="container container-padded">
     <h1>Our History</h1>
     <div> {{/* Prevents bug where p would appear inline with h2 */}}
-      <p>URY has a rich history of pioneering broadcasting, beginning in 1968 when URY became the UK's first legal independent
-        radio station. URY's achievements over the years include numerous awards, a launch show hosted by John Peel, special
-        FM broadcasts and numerous charity events.</p>
-      <p>In 2005, URY obtained national recognition of its achievements by being named BBC Radio One Student Station of the
-        Year.</p>
+      <p>URY has a rich history of pioneering broadcasting, beginning in 1968 when URY became the UK’s first legal independent radio station, with a joint broadcast with BBC York and featured a guest appearance by John Peel.</p>
+      <p>URY has been fortunate enough to receive many awards over its years including BBC Radio 1 Student Station of the Year in 2005, and many presenter/show awards at the Student Radio Awards.</p>
+      <p>URY has put on a variety of larger events such as in March 2013 when three members broadcasted for 40 hours in aid of Macmillan Cancer Support raising over £1800, then in June 2016 URY hosted its longest ever show URY 101 from Greg’s Place for a record 101 hours in aid of Yorkshire Cancer Research raising over £1700.</p>
+      <p>There has been just as many technical achievements over URY’s years, most notably, in Autumn 2013 the internal audio systems of URY were completely overhauled by the heads of the engineering team to “Beat the Buzz” using Focusrite's RedNet system.</p>
     </div>
   </div>
 </div>
