--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -30,9 +30,8 @@
     <div class="row">
       <div class="col">
         <h4>Want to help York make incredible <strong>Award Winning</strong> radio?</h4>
-        <h4>Want to join one of the best, largest and most diverse societies university has to offer?</h4>
-        <p>Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen,
-          play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.
+        <h4>Want to join one of the best, largest and most diverse societies the university has to offer?</h4>
+        <p>Whether you want to hear your voice played out on the airwaves, break the biggest news stories as they happen, play with state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.
         </p>
       </div>
     </div>
@@ -41,25 +40,18 @@
 <div class="container-fluid container-padded ">
   <div class="container container-padded">
       <h2>What Can I Do?</h2>
-      <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes)
-        and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show!
-        Take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>. If you can see a gap, there's no reason you couldn't fill it.
-      </p>
-      <p>As well as just presenting, there are <strong><a href="/teams" title="Have a look at what our teams do!">{{.NumTeams}} Teams</a></strong>
-        of students that make content and keep URY running. You can see more about them at the bottom of this page.
-      </p>
+      <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes) and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show! Just take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>, if you can see a gap, there's no reason you couldn't fill it!</p>
+      <p>As well as presenting, URY also has {{.NumTeams}} teams of students which look after all aspects of running a radio station. Whether that be creating the content or maintaining the station. To find out more about our teams, and what each entails, please go to the <strong><a href="/teams" title="Have a look at what our teams do!">teams</a></strong> page.</p>
   </div>
 </div>
 <div class="container-fluid container-padded  bg-primary">
   <div class="container container-padded">
       <h2>How Do I Get A Show?</h2>
       <div> {{/* Prevents bug where p would appear inline with h2 */}}
-        <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
-        <p>Once you have paid, log in to <a href="/myradio/">MyRadio</a> and set up an account, from there you will be able to sign up to training! Under "Get On Air",
-          click "Get Studio Trained" and take your pick of training sessions you can attend, click join and you are good to go!
-          If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.
-          During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
-        <p><strong>Easy peasy.</strong></p>
+        <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through the <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU website</a>.</p>
+        <p>Once you have paid, you will need to create a <a href="/myradio/">MyRadio</a> account, from there you will be able to sign up to training! Under the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
+        <p>During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
+        <p><strong>Easy peasy!</strong></p>
     </div>
     </div>
 </div>
