--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,11 +77,20 @@ footer {
   background: url("/images/bg-banner-2.jpg") center center no-repeat;
   background-size: cover;
   color: $white;
-  padding: 10em 0;
+  padding: 4em;
+  padding-bottom: 2em;
 
   .slim {
     padding: 6em 0 3em;
   }
+}
+
+.display-2 {
+    font-size: 3.5rem;
+}
+
+.display-4 {
+    font-size: 1.5rem;
 }
 
 // Scroll horizontal, used for horizontal scrolling rows
@@ -245,6 +254,19 @@ footer {
 
   .mobile-only {
     display: none;
+  }
+
+  // Give more padding to banners
+  .banner-2 {
+    padding: 10em 0;
+  }
+
+  .display-2 {
+    font-size: 5.5rem;
+  }
+
+  .display-4 {
+    font-size: 3.5rem;
   }
 }
 
