included more display text types

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,8 +85,16 @@ footer {
   }
 }
 
+.display-1 {
+  font-size: 4.5rem;
+}
+
 .display-2 {
   font-size: 3.5rem;
+}
+
+.display-3 {
+  font-size: 2.5rem;
 }
 
 .display-4 {
@@ -261,8 +269,16 @@ footer {
     padding: 10em 0;
   }
 
+  .display-1 {
+    font-size: 6.5rem;
+  }
+
   .display-2 {
     font-size: 5.5rem;
+  }
+
+  .display-3 {
+    font-size: 4.5rem;
   }
 
   .display-4 {
