--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -2,7 +2,7 @@
 {{define "content"}}
   {{with .PageData}}
   <div class="container-fluid banner-2 text-overlay">
-    <div class="container">
+    <div class="container container-padded">
       <div class="row justify-content-center">
         <div class="text-center">
           <h1 class="display-3">Our Teams</h1>
