Added padding to team pages banner container to improve consistency

--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -14,7 +14,7 @@
 {{define "content"}}
   {{with .PageData}}
     <div class="container-fluid banner-2 slim text-overlay">
-      <div class="container">
+      <div class="container container-padded">
         <div class="row justify-content-center">
           <div class="text-center">
             <h1 class="display-5"><a href="{{url "/teams/"}}" title="View all teams">Our Teams</a></h1>
