--- a/sass/base/_uryCard.scss
+++ b/sass/base/_uryCard.scss
@@ -42,6 +42,10 @@ a.ury-card,
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+
+    .ury-card-lg-title {
+      @extend .h3;
+    }
   }
 
 
@@ -52,6 +56,14 @@ a.ury-card,
     &:hover {
       background: tint($podcast-bg, 70%);
     }
+  }
+
+  &.link {
+    height: 100%;
+    display: flex;
+    justify-content:center;
+    align-content:center;
+    flex-direction:column;
   }
 }
 
