--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -53,11 +53,9 @@
   </div>
   <div id="youtube-video-slider" class="row pb-3 youtube-grid">
   </div>
-  <div class="row justify-content-end">
-    <div class="col">
-        <a href="{{.PageContext.Youtube.ChannelURL}}" class="btn btn-primary-inverse btn-sm float-right" title="View All Podcasts">View all Videos</a>
-      </div>
-    </div>
+  <div class="row justify-content-center">
+    <a href="{{.PageContext.Youtube.ChannelURL}}" class="view-more-link" title="View more on Youtube...">View more on Youtube...</a>
+  </div>
 </div>
 {{if .PageData.LatestPodcasts}}
 <div id="index-podcasts" class="container-fluid container-padded bg-third">
@@ -74,6 +72,13 @@
         </a>
       </div>
     {{end}}
+    <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 pb-3">
+      <a class="ury-card podcast link" href="test">
+        <div class="ury-card-body">
+          <div class="ury-card-lg-title">See all podcasts...</div>
+        </div>
+      </a>
+    </div>
   </div>
 </div>
 {{end}}
