remove padding from bottom of scroll containers

--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -58,7 +58,7 @@
   </div>
 </div>
 {{if .PageData.LatestPodcasts}}
-<div id="index-podcasts" class="container-fluid container-padded bg-third">
+<div id="index-podcasts" class="container-fluid container-padded pb-0 bg-third">
   <h2>Latest Podcasts</h2>
   <div class="row custom-scrollbar scroll-horiz">
     {{range .PageData.LatestPodcasts}}
