remove unused file, replace with index page file

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -1,6 +1,6 @@
 @import "currentAndNext";
 @import "banner";
-@import "index-schedule";
+@import "index";
 @import "navbar";
 @import "onDemand";
 @import "schedule";
