update youtube container names

--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -51,7 +51,7 @@
       <h2>{{.PageContext.ShortName}} on Youtube</h2>
     </div>
   </div>
-  <div id="youtube-video-slider" class="row pb-3 youtube-grid">
+  <div id="youtube-videos" class="row pb-3 youtube-grid">
   </div>
   <div class="row justify-content-center">
     <a href="{{.PageContext.Youtube.ChannelURL}}" class="view-more-link" title="View more on Youtube...">View more on Youtube...</a>
