--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -39,7 +39,7 @@
   </div>
   <div id="index-videos" class="container-fluid container-padded pb-0 bg-secondary">
     <h2>URY Sessions</h2>
-    <div id="youtube-video-slider" class="row scroll-horiz pb-3 custom-scrollbar">
+    <div id="youtube-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
     </div>
   </div>
   {{if .Podcasts}}
