--- a/sass/main.scss
+++ b/sass/main.scss
@@ -78,7 +78,7 @@ footer {
   background-size: cover;
   color: $white;
   padding: 3em;
-  padding-bottom: 0em;
+  padding-bottom: 0;
 
   .slim {
     padding: 6em 0 3em;
