--- a/sass/elements/_index.scss
+++ b/sass/elements/_index.scss
@@ -5,7 +5,7 @@
     transition: 350ms;
 
     .thumbnail {
-      box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .23);
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     }
 
     &:hover {
