--- a/sass/main.scss
+++ b/sass/main.scss
@@ -181,7 +181,7 @@ footer {
 .on-demand {
   background: url("/images/bg-banner-1.jpg") center center no-repeat;
   background-size: cover;
-  color: #ffffff;
+  color: $white;
   padding: 6em 0;
 }
 
@@ -195,6 +195,7 @@ footer {
     }
 
   }
+
   .section.info {
     border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 
