--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -56,10 +56,10 @@
   <div class="container container-padded">
     <h1>Our History</h1>
     <div> {{/* Prevents bug where p would appear inline with h2 */}}
-      <p>URY has a rich history of pioneering broadcasting, beginning in 1968 when URY became the UK’s first legal independent radio station, with a joint broadcast with BBC York and featured a guest appearance by John Peel.</p>
-      <p>URY has been fortunate enough to receive many awards over its years including BBC Radio 1 Student Station of the Year in 2005, and many presenter/show awards at the Student Radio Awards.</p>
-      <p>URY has put on a variety of larger events such as in March 2013 when three members broadcasted for 40 hours in aid of Macmillan Cancer Support raising over £1800, then in June 2016 URY hosted its longest ever show URY 101 from Greg’s Place for a record 101 hours in aid of Yorkshire Cancer Research raising over £1700.</p>
-      <p>There has been just as many technical achievements over URY’s years, most notably, in Autumn 2013 the internal audio systems of URY were completely overhauled by the heads of the engineering team to “Beat the Buzz” using Focusrite's RedNet system.</p>
+      <p>URY has a rich history of pioneering broadcasting, beginning in 1968 when URY became the first legal independent radio station in the UK, with a joint broadcast featuring special guest John Peel and BBC York.</p>
+      <p>Over the years, we have been fortunate enough to receive numerous awards, including BBC Radio 1 Student Station of the Year in 2005, and many awards from the Student Radio Association.</p>
+      <p>At URY we cover a large range of campus events including student union elections, but we also host our own charity events, such as the 40-hour broadcast in aid of Macmillan Cancer Support back in March 2013, where we raised over £1,800. In June 2016, we went a step further and hosted URY’s longest ever show “URY 101”, live from Greg’s Place for 101 hours, all in aid of Yorkshire Cancer Research raising a massive £1,700.</p>
+      <p>We pride ourselves at URY for running all the technical aspects of the radio station ourselves. In Summer 2015, the internal audio routing was completely overhauled and converted to Audio Over IP by the engineering team in a project known as “Beat the Buzz”.</p>
     </div>
   </div>
 </div>
