--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -41,15 +41,15 @@
   <div class="container container-padded">
       <h2>What Can I Do?</h2>
       <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes) and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show! Just take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>, if you can see a gap, there's no reason you couldn't fill it!</p>
-      <p>As well as presenting, URY also has {{.NumTeams}} teams of students which look after all aspects of running a radio station. Whether that be creating the content or maintaining the station. To find out more about our teams, and what each entails, please go to the <strong><a href="/teams" title="Have a look at what our teams do!">teams</a></strong> page.</p>
+      <p>As well as presenting, URY also has {{.NumTeams}} teams of students which look after all aspects of running a radio station. Whether that be creating the content or maintaining the station. To find out more about our teams, and what each entails, please go to the <strong><a href="{{url "/teams"}}" title="Have a look at what our teams do!">teams</a></strong> page.</p>
   </div>
 </div>
 <div class="container-fluid container-padded  bg-primary">
   <div class="container container-padded">
       <h2>How Do I Get A Show?</h2>
       <div> {{/* Prevents bug where p would appear inline with h2 */}}
-        <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through the <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU website</a>.</p>
-        <p>Once you have paid, you will need to create a <a href="/myradio/">MyRadio</a> account, from there you will be able to sign up to training! Under the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
+        <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through the <a href="//yusu.org" title="York University Students Union" target="_blank">YUSU website</a>.</p>
+        <p>Once you have paid, you will need to create a <a href="{{url "/myradio/"}}">MyRadio</a> account, from there you will be able to sign up to training! Under the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
         <p>During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
         <p><strong>Easy peasy!</strong></p>
     </div>
