--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -49,7 +49,7 @@
       <h2>How Do I Get A Show?</h2>
       <div> {{/* Prevents bug where p would appear inline with h2 */}}
         <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through the <a href="//yusu.org" title="York University Students Union" target="_blank">YUSU website</a>.</p>
-        <p>Once you have paid, you will need to create a <a href="{{url "/myradio/"}}">MyRadio</a> account, from there you will be able to sign up to training! Under the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
+        <p>Once you have paid, you will need to create a <a href="/myradio/">MyRadio</a> account, from there you will be able to sign up to training! Under the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
         <p>During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
         <p><strong>Easy peasy!</strong></p>
     </div>
