--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -30,10 +30,12 @@ $mobile-max-width: 770px;
 //Current and Next
 $current-next-now-bg: #003367;
 $current-next-next-bg: rgba(0, 51, 103, .85);
-
+$current-next-txt-color: #ffffff;
 //Schedule block colours
 $blocks-sustainer-color: $secondary-color;
 $blocks-regular-color: $off-white-color;
 
 //custom scroll bar
 $custom-scrollbar-color: #FFF;
+
+$transition-time: 350ms;
