--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -26,8 +26,34 @@
     }
   }
 
+
+  .current-and-next-now,
+  .current-and-next-next {
+    display: block;
+    height: 100%;
+    color: $current-next-txt-color;
+  }
+
+  a.current-and-next-now {
+    text-decoration: none;
+
+      &:hover {
+        transition: $transition-time;
+        background: tint($current-next-now-bg, 70%);
+      }
+  }
+
   .current-and-next-now {
     background: $current-next-now-bg;
+  }
+
+  a.current-and-next-next {
+    text-decoration: none;
+
+      &:hover {
+        transition: 350ms;
+        background: tint($current-next-next-bg, 70%);
+      }
   }
 
   .current-and-next-next {
