--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -8,7 +8,7 @@
   </div>
   <div class="col-8 col-md-5 p-0 m-0">
     {{if .Current.Url}}
-    <a class="current-and-next-now p-2 pt-3 px-3 p-md-3 p-lg-4 " href="{{.Current.Url}}">
+    <a class="current-and-next-now p-2 pt-3 px-3 p-md-3 p-lg-4 " href="{{.Current.Url}}" title="View the show now playing">
     {{else}}
     <div class="current-and-next-now p-2 pt-3 px-3 p-md-3 p-lg-4">
     {{end}}
@@ -24,7 +24,7 @@
   {{if .Next}}
   <div class="col col-md-5 p-0 m-0">
     {{if .Next.Url}}
-    <a class="current-and-next-next p-3 p-lg-4" href="{{.Current.Url}}">
+    <a class="current-and-next-next p-3 p-lg-4" href="{{.Next.Url}}" title="View the show next up">
     {{else}}
     <div class="current-and-next-next p-3 p-lg-4">
     {{end}}
