--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -68,8 +68,8 @@
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
             <h5 class="card-title">Management </h5>
-            <p><a href="mailto:ury@ury.org.uk" title="Email the management">station.manager<br>@ury.org.uk</a></p>
-            <p class="card-text">They are people who are responsible for the day to day running and make sure that ensures that the key aims of the station are met in terms of output, reveuve and audience </p>
+            <p><a href="mailto:ury@ury.org.uk" title="Email Management">ury<br>@ury.org.uk</a></p>
+            <p class="card-text">They are people who are responsible for the day to day running of the station and ensure the key aims of the station are met in terms of output, revenue and audience.</p>
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
           <div class="card-block">
             <h5 class="card-title">Programme Controller</h5>
             <p class="card-text"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller<br>@ury.org.uk</a></p>
-            <p class="card-text"> The programme controller manages the quality of the station’s output, and ensures we are adhering to our licenses, please contact this email if you have any enquiries on this.</p>
+            <p class="card-text">The programme controller manages the quality of the station’s output and adhering to our licenses, please contact this team if you have any enquiries on this.</p>
           </div>
         </div>
       </div>
@@ -87,9 +87,9 @@
         <div class="card bg-transparent">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
-            <h5 class="card-title">Music Submissions</h5>
-            <p class="card-text"><a href="mailto:music@ury.org.uk" title="Email the Music team">music<br>@ury.org.uk</a></p>
-            <p class="card-text">Are you or do you any know any up and coming bands that would like some air time?</p>
+            <h5 class="card-title">Music Team</h5>
+            <p class="card-text"><a href="mailto:music@ury.org.uk" title="Email the Music Team">music<br>@ury.org.uk</a></p>
+            <p class="card-text">Are you a keen musician, want to hear a track on URY, or know an up and coming band that would like some air time? Give Music Team a shout!</p>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
           <div class="card-block">
             <h5 class="card-title">Production Team</h5>
             <p class="card-text"><a href="mailto:production@ury.org.uk" title="Email the Production Team"> production<br>@ury.org.uk</a></p>
-            <p class="card-text"> Do you want URY to DJ an event? Or do you wish for your event to be broadcasted live?</p>
+            <p class="card-text">Do you want URY to host or DJ an event? Or do you wish for your event to be broadcasted live? Production Team are the ones who manage all of our events.</p>
           </div>
         </div>
       </div>
