Few more fixes.

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -69,7 +69,7 @@
           <div class="card-block">
             <h5 class="card-title">Management </h5>
             <p><a href="mailto:ury@ury.org.uk" title="Email Management">ury<br>@ury.org.uk</a></p>
-            <p class="card-text">They are people who are responsible for the day to day running of the station and ensure the key aims of the station are met in terms of output, revenue and audience.</p>
+            <p class="card-text">These are people who are responsible for the day to day running of the station and ensure the key aims of the station are met in terms of output, revenue and audience.</p>
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
           <div class="card-block">
             <h5 class="card-title">Programme Controller</h5>
             <p class="card-text"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller<br>@ury.org.uk</a></p>
-            <p class="card-text">The programme controller manages the quality of the station’s output and adhering to our licenses, please contact this team if you have any enquiries on this.</p>
+            <p class="card-text">The Programme Controller manages the quality of the station’s output and adhering to our licenses, please contact them if you have any enquiries on this.</p>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
           <div class="card-block">
             <h5 class="card-title">Production Team</h5>
             <p class="card-text"><a href="mailto:production@ury.org.uk" title="Email the Production Team"> production<br>@ury.org.uk</a></p>
-            <p class="card-text">Do you want URY to host or DJ an event? Or do you wish for your event to be broadcasted live? Production Team are the ones who manage all of our events.</p>
+            <p class="card-text">Do you want URY to host or DJ an event? Or do you wish for your event to be broadcasted live? Production Team is the one who manage all of our events.</p>
           </div>
         </div>
       </div>
