--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -6,15 +6,35 @@
     <img src="/images/show-current.png" alt="" />
     <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn mobile-hide px-0" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
   </div>
-  <div class="col-8 col-md-5 p-2 pt-3 px-3 p-md-3 p-lg-4 current-and-next-now">
+  <div class="col-8 col-md-5 p-0 m-0">
+    {{if .Current.Url}}
+    <a class="current-and-next-now p-2 pt-3 px-3 p-md-3 p-lg-4 " href="{{.Current.Url}}" title="View the show now playing">
+    {{else}}
+    <div class="current-and-next-now p-2 pt-3 px-3 p-md-3 p-lg-4">
+    {{end}}
     <h2>Now</h2>
     {{template "current_next" .Current}}
+    {{if .Current.Url}}
+    </a>
+    {{else}}
+    </div>
+    {{end}}
   </div>
   {{end}}
   {{if .Next}}
-  <div class="col col-md-5 p-3 p-lg-4 current-and-next-next">
+  <div class="col col-md-5 p-0 m-0">
+    {{if .Next.Url}}
+    <a class="current-and-next-next p-3 p-lg-4" href="{{.Next.Url}}" title="View the show next up">
+    {{else}}
+    <div class="current-and-next-next p-3 p-lg-4">
+    {{end}}
     <h2>Next</h2>
     {{template "current_next" .Next}}
+    {{if .Next.Url}}
+    </a>
+    {{else}}
+    </div>
+    {{end}}
   </div>
   {{end}}
   <div class="col-12 mobile-only p-0">
@@ -27,13 +47,7 @@
 {{define "current_next"}}
 {{if .Title}}
 <h5 class="ellipsis">
-  {{if .Url}}
-    <a href="{{.Url}}">
-  {{end}}
   {{.Title}}
-  {{if .Url}}
-    </a>
-  {{end}}
 </h5>
 <h6>{{.StartTime.Format "15:04"}} - {{.EndTime.Format "15:04"}}</h6>
 {{else}}
