--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -18,11 +18,27 @@
 
 <!-- schedule header -->
 <div class="container-fluid bg-off-white">
-  <div class="container p-3">
+  <div class="container justify-content-between p-3">
     <div class="row">
-      <div class="col-12 col-lg-6">
+      <div class="col-auto">
         <h1 class="display-4 mobile-hide">Schedule</h1>
         <h5 class="text-muted mobile-hide">{{week (index .Schedule.Dates 0)}}</h5>
+      </div>
+      <div class="col-auto">
+        <div class="schedule-keys collapse">
+          <div class="key-row">
+            <span class="schedule-block-flagship">Flagship</span>
+            <span class="schedule-block-event">Events</span>
+            <span class="schedule-block-specialist-music">Specialist Music</span>
+
+            <span class="schedule-block-news">News</span>
+            <span class="schedule-block-speech">Speech</span>
+            <span class="schedule-block-music">Music</span>
+          </div>
+        </div>
+          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target=".schedule-keys" aria-expanded="false" aria-controls="schedule-keys">
+          Key
+        </button>
       </div>
     </div>
 
@@ -95,19 +111,8 @@
   {{end}}
   <br>
     <div class="row justify-content-center pb-3">
-        <div class="schedule-keys">
-          <div class="key-row">
-            <span class="h5">Key: </span>
-            <span class="schedule-block-flagship">Flagship</span>
-            <span class="schedule-block-event">Events</span>
-            <span class="schedule-block-specialist-music">Specialist Music</span>
-            <span class="h6">Team Content: </span>
-            <span class="schedule-block-news">News</span>
-            <span class="schedule-block-speech">Speech</span>
-            <span class="schedule-block-music">Music</span>
-          </div>
-        </div>
-      </div>
+
+    </div>
   </div>
 </div>
 {{end}}
