--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -60,8 +60,7 @@
       <div class="container container-padded">
         <h2>Get Involved</h2>
         <p>
-          URY has 11 teams of students who look after all aspects of running a radio station. Whether that be creating the content or maintaining the station.
-        </p>
+         If you have any further questions please contact the team officers by using the email seen above or you can also come and visit our station in Vanbrugh College, where there'll almost always be someone there to talk to you and will help you to join the team. If you are interested please go to the get involved page.</p>
         <a href="{{url "/getinvolved/#signUp"}}" class="btn btn-primary-inverse btn-lg">Be part of one!</a>
       </div>
     </div>
