--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -60,7 +60,8 @@
       <div class="container container-padded">
         <h2>Get Involved</h2>
         <p>
-         If you have any further questions, please contact the team officers by using the email seen above. You can also come and visit our station in Vanbrugh College, where there'll almost always be someone there to talk to you and will help you to join the team.</p>
+         If you have any further questions, please contact the team officers by using the email seen above. You can also come and visit our station in Vanbrugh College, where there'll almost always be someone there to talk to you and will help you to join the team.
+        </p>
         <a href="{{url "/getinvolved/"}}" class="btn btn-primary-inverse btn-md">Sign up for URY!</a>
       </div>
     </div>
