--- a/views/podcasts.tmpl
+++ b/views/podcasts.tmpl
@@ -10,7 +10,6 @@
 								<a href="{{url "/ontap/"}}" title="Go back to {{.PageContext.ODName}}">
 									{{- .PageContext.ShortName }} {{.PageContext.ODName -}}
 								</a>
-
             </h1>
             <h2 class="display-3">
               Podcasts
@@ -22,15 +21,27 @@
 
 {{with .PageData}}
 <div class="container container-padded bg-off-white pt-5 mt-5">
-  <nav aria-label="Related Schedules" class="row nav justify-content-between">
-    {{if gt .PageNumber 1}}
-      <a class="nav-link" href="{{url "/podcasts/"}}">Latest Podcasts</a>
-      <a class="nav-link" href="{{url "/podcasts/"}}page/{{.PageNumberPrev}}">Previous Page</a>
-    {{end}}
+  <nav class="row nav justify-content-between">
+    <span>
+      <a class="nav-link
+        {{if gt .PageNumber 1}}
+          disabled
+        {{end}}
+      " href="{{url "/podcasts/"}}page/{{.PageNumberPrev}}">&larr; Previous page</a>
+      <a class="nav-link
+      {{if gt .PageNumber 1}}
+        disabled
+      {{end}}
+      " href="{{url "/podcasts/"}}">Latest</a>
+    </span>
+    <span>
     Page {{.PageNumber}}
+    </span>
+    <span>
     {{if .PageNext}}
-      <a class="nav-link" href="{{url "/podcasts/"}}page/{{.PageNumberNext}}">Next week</a>
+      <a class="nav-link" href="{{url "/podcasts/"}}page/{{.PageNumberNext}}">Next page &rarr;</a>
     {{end}}
+    </span>
   </nav>
   <div class="pageination">
 
