--- a/sass/base/_searchBox.scss
+++ b/sass/base/_searchBox.scss
@@ -13,6 +13,8 @@ $search-background: rgb(255, 255, 255);
   margin-top: auto;
   width: auto;
 
+
+
   input {
     background: none;
     border: 0;
@@ -22,6 +24,7 @@ $search-background: rgb(255, 255, 255);
     padding-left: 0;
     padding-right: .5em;
     width: 100%;
+    float: left;
 
     &:focus {
       outline: none;
@@ -30,6 +33,26 @@ $search-background: rgb(255, 255, 255);
     }
   }
 
+  input[type="radio"] {
+    display: none;
+  }
+  .source-group {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: $off-white-color;
+    border-radius: 45px;
+    padding: 0 15px;
+    label {
+      display: inline-block;
+      padding: 0 5px;
+      font-size: 0.8em;
+    }
+    input:checked + label {
+      color: $blue;
+    }
+
+  }
   button {
     color: $search-button-color;
     border: 0;
