--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-6 col-lg-4">
         <h4>Where is URY?</h4>
-        <p>URY's studios lie at the very heart of the Campus in our own building at Vanbrugh College.<p>
+        <p>URY's studios lie at the very heart of the campus in our own building at Vanbrugh College.<p>
         <p>But URY is not confined to the four walls of the station, we are always around the campus at major University and Student Union events, whether we're covering live music, recruiting new Freshers or reporting on major news events.</p>
         <p>
           <a href="{{url "/contact/#map"}}"title="Contact Page">Find us on a map!</a>
