--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -29,7 +29,7 @@
   <div class="container container-padded">
     <div class="row">
       <div class="col">
-        <h4>Want to help York make incredible <strong>Award Winning</strong> radio?</h4>
+        <h4>Want to help York make incredible <strong>award winning</strong> radio?</h4>
         <h4>Want to join one of the best, largest and most diverse societies the university has to offer?</h4>
         <p>Whether you want to hear your voice played out on the airwaves, break the biggest news stories as they happen, play with state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.
         </p>
