--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -24,7 +24,7 @@
   </div>
 </div>
 <div id="index-just-missed" class="container-fluid container-padded bg-primary pb-0">
-  <h2>You Just Missed...</h2>
+  <h2>You just missed...</h2>
   <div class="row custom-scrollbar scroll-horiz scroll-none-xl">
     {{range .PageData.LatestTimeslots}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 pb-3">
