Remove contact photos and add more padding.

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -64,8 +64,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent">
-          <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
+        <div class="card bg-transparent p-3">
           <div class="card-block">
             <h5 class="card-title">Management </h5>
             <p><a href="mailto:ury@ury.org.uk" title="Email Management">ury<br>@ury.org.uk</a></p>
@@ -74,8 +73,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent">
-          <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
+        <div class="card bg-transparent p-3">
           <div class="card-block">
             <h5 class="card-title">Programme Controller</h5>
             <p class="card-text"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller<br>@ury.org.uk</a></p>
@@ -84,8 +82,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent">
-          <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
+        <div class="card bg-transparent p-3">
           <div class="card-block">
             <h5 class="card-title">Music Team</h5>
             <p class="card-text"><a href="mailto:music@ury.org.uk" title="Email the Music Team">music<br>@ury.org.uk</a></p>
@@ -94,8 +91,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent">
-          <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
+        <div class="card bg-transparent p-3">
           <div class="card-block">
             <h5 class="card-title">Production Team</h5>
             <p class="card-text"><a href="mailto:production@ury.org.uk" title="Email the Production Team"> production<br>@ury.org.uk</a></p>
