Left align the text on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -361,6 +361,10 @@ footer {
   .banner {
     display: none;
   }
+
+  .card-block {
+    text-align: left;
+  }
 }
 
 // Show/Season/Timeslot specific
