Make contact page consistent

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -67,8 +67,8 @@
         <div class="card bg-transparent">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
-            <h5 class="card-title">Management </h5>
-            <p><a href="mailto:ury@ury.org.uk" title="Email Management">ury<br>@ury.org.uk</a></p>
+            <h5 class="card-title">Management</h5>
+            <p><a href="mailto:management@ury.org.uk" title="Email Management">management<br>@ury.org.uk</a></p>
             <p class="card-text">These are people who are responsible for the day to day running of the station and ensure the key aims of the station are met in terms of output, revenue and audience.</p>
           </div>
         </div>
