Make spacing more consistent

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -187,7 +187,7 @@
               <tr>
                 <td>{{.Season.SeasonID}}</td>
                 <td>{{.Season.SeasonNum}}</td>
-                <td>{{.TimeslotNum}}</td>
+                <td style="width:10px">{{.TimeslotNum}}</td>
                 <td><a href="/schedule/shows/timeslots/{{.TimeslotID}}/">{{.StartTime.Format "Monday, _2 Jan 2006 at 15:04"}}</a></td>
               </tr>
             {{end}}
